# ec

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  ec.toml
.gemini/commands/: speckit.specify.toml
.specify/: init-options.json
.specify/memory/: constitution.md
.specify/specs/: 001-ec-core-plan.md
migrations/: 001_initial.sql  002_election_keys.sql  003_results_published.sql
proto/admin/: admin.proto
rules/: plurality.toml  stv.toml
specs/001-ec-core/: plan.md  spec.md  tasks.md
src/: config.rs  crypto.rs  db.rs  lib.rs  main.rs  scheduler.rs  state.rs  types.rs
src/counting/: mod.rs  plurality.rs  stv.rs
src/grpc/: admin.rs  mod.rs
src/handlers/: cast_vote.rs  mod.rs  register.rs  request_token.rs
src/nostr/: listener.rs  messages.rs  mod.rs  publisher.rs
src/rules/: mod.rs  types.rs
tests/: ballot_validation_test.rs  counting_plurality_test.rs  counting_stv_test.rs  crypto_test.rs  handler_cast_vote_test.rs  handler_register_test.rs  handler_request_token_test.rs  scheduler_test.rs
