[package]
name = "ec"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[dependencies]
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
blind-rsa-signatures = "0.17.1"
base64 = "0.22"
nanoid = "0.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
clap = { version = "4", features = ["derive"] }
sha2 = "0.11.0-rc.5"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
toml = "1.0"
secrecy = { version = "0.10", features = ["serde"] }
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
